Fixing content spacing in the anime thumbnail lists

--- a/src/app/styles/components/AnimeThumbnailList.scss
+++ b/src/app/styles/components/AnimeThumbnailList.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 15.8% 15.8% 15.8% 15.8% 15.8% 15.8%;
   grid-gap: 1em 0.8%;
   color: #444;
-  justify-content: center;
+  justify-content: space-between;
   margin-bottom: 40px;
 
   &.no-grid {
